fixed align icons

--- a/styles/elements/_list-icon.scss
+++ b/styles/elements/_list-icon.scss
@@ -5,7 +5,7 @@
 .list-icon {
 
   img {
-    vertical-align: text-bottom;
+    vertical-align: sub;
   }
 
   &.list-items-expanded {
